p.waitFor hangs fixed, added fallback if still hangs